<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <!-- TextView con la etiqueta del creador -->
    <TextView
        android:id="@+id/tvCreador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="64dp"
        android:text="@string/txtCreador"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/ivHuella"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- ImageView huella digital -->
    <ImageView
        android:id="@+id/ivHuella"
        android:layout_width="39dp"
        android:layout_height="42dp"
        android:layout_marginStart="161dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="114dp"
        android:tint="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCreador"
        app:srcCompat="?android:attr/fingerprintAuthDrawable"
        tools:ignore="UseAppTint" />

    <!-- Botones IrWeb, Soporte y Volver -->
    <Button
        android:id="@+id/btnPelicRelac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="103dp"
        android:text="@string/txtBtnIrWeb"
        app:layout_constraintBottom_toTopOf="@+id/btnEditarPelic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnVolverPrincipio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="135dp"
        android:layout_marginEnd="135dp"
        android:layout_marginBottom="334dp"
        android:text="@string/txtBtnVolver"
        app:layout_constraintBottom_toTopOf="@+id/tvCreador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditarPelic"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnEditarPelic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="91dp"
        android:layout_marginEnd="91dp"
        android:text="@string/txtBtnSoporte"
        app:layout_constraintBottom_toTopOf="@+id/btnVolverPrincipio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPelicRelac"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>