<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorFondo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilmListActivity">

    <!-- Botones IrWeb, Soporte y Volver -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPelicRelac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="103dp"
        app:backgroundTint="@color/colorBotones"
        android:text="@string/filmA"
        app:layout_constraintBottom_toTopOf="@+id/btnEditarPelic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnVolverPrincipio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="135dp"
        android:layout_marginEnd="135dp"
        android:layout_marginBottom="487dp"
        app:backgroundTint="@color/colorBotones"
        android:text="@string/acercaDe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditarPelic"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEditarPelic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="91dp"
        android:layout_marginEnd="91dp"
        app:backgroundTint="@color/colorBotones"
        android:text="@string/filmB"
        app:layout_constraintBottom_toTopOf="@+id/btnVolverPrincipio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPelicRelac"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>